tests/reference/asr-merge_bits_run-9579699.stderr
semantic error: Type and kind of the relevant arguments of Mergebits must be the same
 --> tests/errors/merge_bits_run.f90:7:14
  |
7 |     print *, merge_bits(a, b, c)
  |              ^^^^^^^^^^^^^^^^^^^ 
